--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.main-bg {
+  width: 100%;
+  height: 300px;
+  background-image: url("./img/img1.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 .App {
   text-align: center;
 }
